Flip MS1 pipeline to use auto-generated XARs.
Add anti-aliasing to experiment run graphs, reduce clutter for showing outputs.

Don't expose string-based ApplicationType property - use the enum.